# Lineage-analysis

./: .gitignore  .pre-commit-config.yaml  2024-04-08_13-03-47_Simulation2_cells=3,model=2,pars=[ +4.52000e+02 +5.00000e+00 +3.00000e+03 +2.00000e+00 +5.00000e-01 +2.88000e+02 +0..txt  LineageABCmodel.jl  LineageMCmodel2.jl  Lineagetree.jl  Project.toml  README.md  controlgetlineageABCdynamics.jl  myCUDAfunctions.jl  mydistributions.jl  nutssampler.jl  pyproject.toml  readandanalysemultipleABCstatistics.jl  readlineagefile.jl  run-lineage-analysis.py
.github/workflows/: Linting.yml  ParslPipeline.yml  Tests.yml
docs/: parsl.md  tracking_formats.md
track_converter/src/: convert_tracks.py  preprocess_btrack.py  preprocess_ctc.py  preprocess_mastodon.py  preprocess_trackmate.py  preprocess_trackmate_or_mamut.py  utils.py
track_converter/tests/: conftest.py  test_cli.py  test_preprocess_btrack.py  test_preprocess_ctc.py  test_preprocess_mastodon.py  test_preprocess_trackmate.py  test_preprocess_trackmate_or_mamut.py  test_utils.py  test_validator.py  utils.py
track_converter/tests/data/: tracks_begin_larger_than_end_frame_by_many.txt  tracks_begin_larger_than_end_frame_by_one.txt  tracks_begin_larger_than_end_frame_by_two.txt  tracks_daughter_two_frames_after_mother.txt  tracks_one_daughter.txt  tracks_one_tree.txt  tracks_right_censored_with_daughters.txt  tracks_two_trees.txt
track_converter/tests/data/CTC/: tracks_begin_larger_than_end_frame_by_two.txt  tracks_daughter_two_frames_after_mother.txt  tracks_late_daughter.txt  tracks_one_daughter.txt  tracks_two_trees_with_censoring_col.txt  tracks_valid_large.txt
track_converter/tests/data/btrack/: README.md  tracks.h5
track_converter/tests/data/mastodon/: MastodonTable-Link.csv  MastodonTable-Spot.csv  README.md  expected_ctc_output.txt  export.mastodon
track_converter/tests/data/trackmate/: FakeTracks_edges.csv  FakeTracks_spots.csv  FakeTracks_tracks.csv  README.md  expected_ctc_output.txt
