[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
name = "lineage-analysis"
authors = [
    {email = "arc.collaborations@ucl.ac.uk", name = "Centre for Advanced Research Computing, UCL"},
]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pandas>=2.2.3, <3",
  "btrack>=0.6.5, <1",
  "click>=8.1.7, <9",
  "parsl>=2024.06.24",
]
description = "A package to convert track formats"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["track_converter"]
exclude = ["logdir", "runinfo"]

[tool.ruff]
fix = true
force-exclude = true
line-length = 120

[tool.ruff.lint]
ignore = [
    "COM812", # trailing commas (ruff-format recommended)
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
    "D104",
    "D100",
    "PLR2004",
    "PLR0913",
    "FBT001",
    "FBT002",
    "PD101",
    "SIM108"
]
per-file-ignores = {"track_converter/tests*" = [
    "INP001", # File is part of an implicit namespace package.
    "S101", # Use of `assert` detected,
    "ANN001",
    "ANN201",
    "D103",
    "PT006"
]}
select = ["ALL"]
mccabe.max-complexity = 18

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--verbose",
]
testpaths = [
    "track_converter/tests",
]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[tool.mypy]
explicit_package_bases = true
